--- a/style.css
+++ b/style.css
@@ -234,6 +234,44 @@
 	background-color:#ff991d;
 }
 
+.tooltip {
+	position:relative;
+}
+
+.tooltip-text {
+	opacity:0;
+	pointer-events: none;
+	-webkit-transition:opacity 300ms;
+	transition:opacity 300ms;
+	padding: 0.5em 1em;
+    border-radius: 4px;
+	z-index: 100;
+	position: absolute;
+    top: 100%;
+    left: 0;
+    width: 250px;
+    background-color: #444;
+	color: #fff;	
+}
+.tooltip-icon {
+	color: #2aabe1;
+    font-size: 20px;
+    vertical-align: super;
+	opacity: 0.6;
+	cursor:pointer;
+}
+
+.tooltip:hover .tooltip-icon,
+.tooltip:focus .tooltip-icon {
+	opacity:1;
+}
+
+.tooltip:hover .tooltip-text,
+.tooltip:focus .tooltip-text {
+	pointer-events: initial;
+	opacity:1;
+}
+
 @media(max-width:960px){
 
 	.dynamics-savings-calculator-field .field-col-1,
